--- a/nesting_gui.vcxproj
+++ b/nesting_gui.vcxproj
@@ -212,9 +212,11 @@
   <ItemGroup>
     <ClCompile Include="algorithm.cpp" />
     <ClCompile Include="candidate_points.cpp" />
+    <ClCompile Include="circle_nesting.cpp" />
     <ClCompile Include="data_converter.cpp" />
     <ClCompile Include="dx_iface.cpp" />
     <ClCompile Include="layout.cpp" />
+    <ClCompile Include="genetic_algorithm.cpp" />
     <ClCompile Include="interface.cpp" />
     <ClCompile Include="layout_widget.cpp" />
     <ClCompile Include="libdxfrw\drw_base.cpp" />
